Add Tasks commands

--- a/common/competences-common.cabal
+++ b/common/competences-common.cabal
@@ -29,6 +29,7 @@ library
         Competences.Command.Competences
         Competences.Command.Evidences
         Competences.Command.Interpret
+        Competences.Command.Tasks
         Competences.Command.Users
         Competences.Common.IxSet
         Competences.Document
