Some support for editing tasks in the frontend

--- a/frontend/competences-frontend.cabal
+++ b/frontend/competences-frontend.cabal
@@ -51,7 +51,9 @@ library
         Competences.Frontend.Component.Selector.EvidenceSelector,
         Competences.Frontend.Component.Selector.ListSelector,
         Competences.Frontend.Component.Selector.ObservationSelector,
+        Competences.Frontend.Component.Selector.SelfContainedTaskSelector,
         Competences.Frontend.Component.Selector.UserSelector,
+        Competences.Frontend.Component.SelfContainedTaskEditor,
         Competences.Frontend.Component.Static,
         Competences.Frontend.Component.TemplateEvaluator,
         Competences.Frontend.Component.StatisticsOverview,
