Work on having a generic MultiStageSelector

--- a/frontend/competences-frontend.cabal
+++ b/frontend/competences-frontend.cabal
@@ -49,7 +49,9 @@ library
         Competences.Frontend.Component.Selector.DateSelector,
         Competences.Frontend.Component.Selector.EnumSelector,
         Competences.Frontend.Component.Selector.EvidenceSelector,
+        Competences.Frontend.Component.Selector.Example,
         Competences.Frontend.Component.Selector.ListSelector,
+        Competences.Frontend.Component.Selector.MultiStageSelector,
         Competences.Frontend.Component.Selector.ObservationSelector,
         Competences.Frontend.Component.Selector.SelfContainedTaskSelector,
         Competences.Frontend.Component.Selector.UserSelector,
