Refactor MultiStageSelector; add CompetenceLevelSelector

--- a/frontend/competences-frontend.cabal
+++ b/frontend/competences-frontend.cabal
@@ -47,9 +47,9 @@ library
         Competences.Frontend.Component.Selector.Common,
         Competences.Frontend.Component.Selector.CompetenceGridSelector,
         Competences.Frontend.Component.Selector.DateSelector,
+        Competences.Frontend.Component.Selector.CompetenceLevelSelector,
         Competences.Frontend.Component.Selector.EnumSelector,
         Competences.Frontend.Component.Selector.EvidenceSelector,
-        Competences.Frontend.Component.Selector.Example,
         Competences.Frontend.Component.Selector.ListSelector,
         Competences.Frontend.Component.Selector.MultiStageSelector,
         Competences.Frontend.Component.Selector.ObservationSelector,
