Add assignment editor frontend

--- a/frontend/competences-frontend.cabal
+++ b/frontend/competences-frontend.cabal
@@ -32,6 +32,7 @@ library
         Competences.Frontend.Common.Reorder,
         Competences.Frontend.Common.Translate,
         Competences.Frontend.Common,
+        Competences.Frontend.Component.AssignmentEditor,
         Competences.Frontend.Component.CompetenceGridEditor,
         Competences.Frontend.Component.CompetenceGridViewer,
         Competences.Frontend.Component.Editor,
@@ -44,6 +45,7 @@ library
         Competences.Frontend.Component.Editor.View,
         Competences.Frontend.Component.EvidenceCompetenceSelector,
         Competences.Frontend.Component.EvidenceEditor,
+        Competences.Frontend.Component.Selector.AssignmentSelector,
         Competences.Frontend.Component.Selector.Common,
         Competences.Frontend.Component.Selector.CompetenceGridSelector,
         Competences.Frontend.Component.Selector.DateSelector,
@@ -52,12 +54,12 @@ library
         Competences.Frontend.Component.Selector.EvidenceSelector,
         Competences.Frontend.Component.Selector.ListSelector,
         Competences.Frontend.Component.Selector.MultiStageSelector,
+        Competences.Frontend.Component.Selector.MultiTaskSelector,
         Competences.Frontend.Component.Selector.ObservationSelector,
         Competences.Frontend.Component.Selector.SelfContainedTaskSelector,
         Competences.Frontend.Component.Selector.UserSelector,
         Competences.Frontend.Component.SelfContainedTaskEditor,
         Competences.Frontend.Component.Static,
-        Competences.Frontend.Component.TemplateEvaluator,
         Competences.Frontend.Component.StatisticsOverview,
         Competences.Frontend.Component.StatisticsViewer,
         Competences.Frontend.Component.UserListEditor,
