Experimenting with Basecoat-like components

--- a/frontend/competences-frontend.cabal
+++ b/frontend/competences-frontend.cabal
@@ -54,6 +54,7 @@ library
         Competences.Frontend.Component.Selector.EvidenceSelector,
         Competences.Frontend.Component.Selector.ListSelector,
         Competences.Frontend.Component.Selector.MultiStageSelector,
+        Competences.Frontend.Component.Selector.SearchableListSelector,
         Competences.Frontend.Component.Selector.MultiTaskSelector,
         Competences.Frontend.Component.Selector.ObservationSelector,
         Competences.Frontend.Component.Selector.SelfContainedTaskSelector,
@@ -69,6 +70,7 @@ library
         Competences.Frontend.View.Button,
         Competences.Frontend.View.Card,
         Competences.Frontend.View.Colors,
+        Competences.Frontend.View.Combobox,
         Competences.Frontend.View.Component,
         Competences.Frontend.View.DesignTokens,
         Competences.Frontend.View.Form,
