Refactor competence grid editor and viewer

--- a/frontend/competences-frontend.cabal
+++ b/frontend/competences-frontend.cabal
@@ -33,8 +33,7 @@ library
         Competences.Frontend.Component.AssignmentEditor,
         Competences.Frontend.Component.AssignmentEvaluator,
         Competences.Frontend.Component.AssignmentViewer,
-        Competences.Frontend.Component.CompetenceGridEditor,
-        Competences.Frontend.Component.CompetenceGridViewer,
+        Competences.Frontend.Component.CompetenceGrid,
         Competences.Frontend.Component.Editor,
         Competences.Frontend.Component.Editor.Editable,
         Competences.Frontend.Component.Editor.EditorField,
