Refactor to use the selectorDetailComponent throughout

--- a/frontend/competences-frontend.cabal
+++ b/frontend/competences-frontend.cabal
@@ -30,8 +30,9 @@ library
         Competences.Frontend.Common.Reorder,
         Competences.Frontend.Common.Translate,
         Competences.Frontend.Common,
-        Competences.Frontend.Component.AssignmentEditor,
-        Competences.Frontend.Component.AssignmentEvaluator,
+        Competences.Frontend.Component.Assignment,
+        Competences.Frontend.Component.Assignment.EditorDetail,
+        Competences.Frontend.Component.Assignment.EvaluatorDetail,
         Competences.Frontend.Component.AssignmentViewer,
         Competences.Frontend.Component.CompetenceGrid,
         Competences.Frontend.Component.Editor,
