--- a/frontend/competences-frontend.cabal
+++ b/frontend/competences-frontend.cabal
@@ -57,10 +57,12 @@ library
         Competences.Frontend.Component.Selector.SearchableListSelector,
         Competences.Frontend.Component.Selector.MultiTaskSelector,
         Competences.Frontend.Component.Selector.ObservationSelector,
-        Competences.Frontend.Component.Selector.SelfContainedTaskSelector,
+        Competences.Frontend.Component.Selector.TaskOrGroupSelector,
         Competences.Frontend.Component.Selector.UserSelector,
         Competences.Frontend.Component.SelectorDetail,
-        Competences.Frontend.Component.SelfContainedTaskEditor,
+        Competences.Frontend.Component.TaskEditor,
+        Competences.Frontend.Component.TaskEditor.TaskDetailView,
+        Competences.Frontend.Component.TaskEditor.TaskGroupDetailView,
         Competences.Frontend.Component.Static,
         Competences.Frontend.Component.StatisticsOverview,
         Competences.Frontend.Component.UserListEditor,
