--- a/frontend/competences-frontend.cabal
+++ b/frontend/competences-frontend.cabal
@@ -81,6 +81,7 @@ library
         Competences.Frontend.View.Layout,
         Competences.Frontend.View.MainPage,
         Competences.Frontend.View.Modal,
+        Competences.Frontend.View.SelectorList,
         Competences.Frontend.View.SidePanel,
         Competences.Frontend.View.Table,
         Competences.Frontend.View.Tailwind,
