--- a/frontend/competences-frontend.cabal
+++ b/frontend/competences-frontend.cabal
@@ -68,6 +68,7 @@ library
         Competences.Frontend.Component.StatisticsOverview,
         Competences.Frontend.Component.UserListEditor,
         Competences.Frontend.SyncDocument,
+        Competences.Frontend.UIState,
         Competences.Frontend.View,
         Competences.Frontend.View.Badge,
         Competences.Frontend.View.Button,
