--- a/common/competences-common.cabal
+++ b/common/competences-common.cabal
@@ -27,6 +27,7 @@ library
         Competences.Command.Assignments
         Competences.Command.ChangeField
         Competences.Command.Common
+        Competences.Command.CompetenceAssessments
         Competences.Command.Competences
         Competences.Command.Evidences
         Competences.Command.Interpret
@@ -41,13 +42,13 @@ library
         Competences.Document.Competence
         Competences.Document.CompetenceGrid
         Competences.Document.Evidence
+        Competences.Document.Grade
         Competences.Document.Id
         Competences.Document.Lock
         Competences.Document.Order
         Competences.Document.Resource
         Competences.Document.Task
         Competences.Document.User
-        Competences.Document.Verdict
         Competences.Protocol
     build-depends:
         base ^>=4.21.0.0,
