Split up CompetenceGrid sub components

--- a/frontend/competences-frontend.cabal
+++ b/frontend/competences-frontend.cabal
@@ -35,6 +35,10 @@ library
         Competences.Frontend.Component.Assignment.EvaluatorDetail,
         Competences.Frontend.Component.AssignmentViewer,
         Competences.Frontend.Component.CompetenceGrid,
+        Competences.Frontend.Component.CompetenceGrid.Assessment,
+        Competences.Frontend.Component.CompetenceGrid.Editor,
+        Competences.Frontend.Component.CompetenceGrid.Types,
+        Competences.Frontend.Component.CompetenceGrid.Viewer,
         Competences.Frontend.Component.ConnectionStatus,
         Competences.Frontend.Component.Editor,
         Competences.Frontend.Component.Editor.Editable,
