Start refactoring where we redocue size of models

--- a/frontend/competences-frontend.cabal
+++ b/frontend/competences-frontend.cabal
@@ -73,8 +73,10 @@ library
         Competences.Frontend.Component.Static,
         Competences.Frontend.Component.StatisticsOverview,
         Competences.Frontend.Component.UserListEditor,
-        Competences.Frontend.SyncDocument,
-        Competences.Frontend.UIState,
+        Competences.Frontend.SyncContext,
+        Competences.Frontend.SyncContext.ProjectedSubscription,
+        Competences.Frontend.SyncContext.SyncDocument,
+        Competences.Frontend.SyncContext.UIState,
         Competences.Frontend.View,
         Competences.Frontend.View.Badge,
         Competences.Frontend.View.Button,
