Implement cache busting for more files

--- a/backend/competences-backend.cabal
+++ b/backend/competences-backend.cabal
@@ -89,6 +89,7 @@ executable competences-backend
         bytestring,
         competences-backend,
         competences-common,
+        containers,
         http-types,
         optparse-applicative,
         postgresql-simple,
